# zing

./: .gitignore  README.md  build.sh  flash.sh  logger.py  pyproject.toml
firmware/: CMakeLists.txt  main.c
web/: index.html  webdash.py
